samples/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugger-pod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: debugger
  template:
    metadata:
      labels:
        app: debugger
    spec:
      containers:
      - name: debugger
        image: quay.io/cloud-for-you/debugger-pod:1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 128Mi
