samples/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debugger
spec:
  ingressClassName: haproxy
  rules:
  - host: debugger.apps.kind.local
    http:
      paths:
      - backend:
          service:
            name: debugger
            port:
              number: 8080
        path: /
        pathType: Prefix
